# cli-solanize

./: .gitignore  Cargo.toml  README.md  config.yaml  deploy.sh  wallet.json
.github/workflows/: deploy.yml
src/: cli.rs  config.rs  error.rs  jupiter.rs  main.rs  solana_client.rs  token.rs  transaction.rs  wallet.rs  web.rs
