[package]
name = "cli-solanize"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
bincode = "1.3"
bs58 = "0.5.1"
clap = { version = "4.5.45", features = ["derive"] }
dialoguer = "0.11.0"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
serde_yaml = "0.9.34"
solana-account-decoder = "2.3.7"
# Use matching 2.3.x versions that actually exist
solana-client = "2.3.7"
solana-program = "2.3.0"
solana-sdk = "2.3.1"      # ← Available version
# SPL tokens compatible with 2.3.x
spl-associated-token-account = "6.0.0"
spl-token = "6.0.0"
thiserror = "2.0.15"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
